--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Geneset</title>
+  <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?3.3.0/build/cssfonts/fonts-min.css&3.3.0/build/cssreset/reset-min.css&3.3.0/build/cssbase/base-min.css">
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag "jquery.min", "jquery-ui-1.8.10.custom.min", "rails", "meshcomplete" %>
   <%= csrf_meta_tag %>
