--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,1 +1,16 @@
-<%= meshcomplete %>
+<%= meshcomplete(@ids) %>
+
+<h4>TODO</h4>
+<ol>
+  <li>update url on autocomplete</li>
+  <li>delete key</li>
+  <li>add 'Search topics ...'</li>
+  <li>download link</li>
+  <li>related subjects</li>
+  <li>related genes in genes#show</li>
+  <li>species filter</li>
+  <li>MeSH nav sidebar</li>
+  <li>odds ratio</li>
+  <li>autocomplete gene symbol</li>
+  <li>search pubmed with gene_id</li>
+</ol>
